--- a/WebDesign1300/HW01/HW02/HW03/HW04/HW5/style.css
+++ b/WebDesign1300/HW01/HW02/HW03/HW04/HW5/style.css
@@ -1,51 +1,58 @@
 body{
-   background-color: darkblue;
+  background-color: light grey;
 }
 
-#page{
-  width: 80%;
-  margin: auto;
-  background-color: purple;
-  align-content: center;
+#wrapper{
+  background-color: #F8F8FF;
+  box-shadow: 2px 5px grey;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .header{
-  width: 100%;
+  background-color: #6495ED;
+  border: 1px solid black;
+  border-radius: 10px;
 
-  background-color: lightblue;
 }
 
-#content{
-  width: 100%;
-  background-color: yellow;
+.h1{
+  text-align: center;
+}
+.contact{
+  float: right;
+  padding: 10px;
 }
 
-.main{
-  width: 73%;
-  height: 500px;
-  float: left;
-  background-color: red;
-  padding: 1em;
+.img{
+  padding: 10px;
+
+}
+
+.skills{
+  padding: 10px;
 }
 
 .sidebar{
-  width: 20%;
-  height: 500px;
-  overflow:scroll;
-  border-left: 1px;
-  background-color: green;
-  padding-left: 1em;
-  padding-right: 1em;
-  float:right;
+  background-color: lightgrey ;
+  width: 12%;
+  height: 1143px;
+  border: 1px solid red;
+  float: left;
 }
 
-.row::after{
-  content: "";
-  display: table;
-  clear: both;
+.main{
+padding: 190px;
+padding-top: 10px;
 }
 
-#footer{
+.textcolor{
+  color :red;
+}
+.footer{
+  background-color: #6495ED;
   text-align: center;
-  background-color: lightblue;
+  width: 100%;
+  height: 110px;
 }
